Do not run PowerMock tests and others needing '--add-opens' on JDK 16+
TODO: Extend Maven configuration in order to allow self-attachment on
JDK 9+ and also add the necessary '--add-opens' statements for
PowerMock.