@@ -6,12 +6,15 @@ import org.powermock.modules.junit4.PowerMockRunner
 import org.powermock.modules.junit4.PowerMockRunnerDelegate
 import org.spockframework.runtime.Sputnik
 import reactor.core.publisher.Mono
+import spock.lang.Requires
 import spock.lang.Specification
 
 import static org.mockito.ArgumentMatchers.anyString
 import static org.powermock.api.mockito.PowerMockito.mockStatic
 import static org.powermock.api.mockito.PowerMockito.when
 
+// TODO: Configure '--add-opens' and '-Djdk.attach.allowAttachSelf=true' for JDK 16+ in Surefire/Failsafe
+@Requires({ Integer.parseInt(System.getProperty("java.version").replaceAll("[.].*", "")) < 16 })
 @RunWith(PowerMockRunner)
 @PowerMockRunnerDelegate(Sputnik)
 @PrepareForTest([Mono])
