@@ -10,6 +10,7 @@ import org.spockframework.runtime.Sputnik
 import org.springframework.http.HttpStatus
 import org.springframework.http.RequestEntity
 import org.springframework.http.ResponseEntity
+import spock.lang.Requires
 import spock.lang.Specification
 import spock.lang.Unroll
 
@@ -20,6 +21,8 @@ import static org.powermock.api.mockito.PowerMockito.*
 import static org.powermock.api.support.membermodification.MemberMatcher.method
 import static org.powermock.api.support.membermodification.MemberModifier.stub
 
+// TODO: Configure '--add-opens' and '-Djdk.attach.allowAttachSelf=true' for JDK 16+ in Surefire/Failsafe
+@Requires({ Integer.parseInt(System.getProperty("java.version").replaceAll("[.].*", "")) < 16 })
 @RunWith(PowerMockRunner)
 @PowerMockRunnerDelegate(Sputnik)
 // Avoid java.lang.IllegalAccessError:
