@@ -5,6 +5,7 @@ import org.powermock.core.classloader.annotations.PrepareForTest
 import org.powermock.modules.junit4.PowerMockRunner
 import org.powermock.modules.junit4.PowerMockRunnerDelegate
 import org.spockframework.runtime.Sputnik
+import spock.lang.Requires
 import spock.lang.Specification
 
 import static de.scrum_master.stackoverflow.q59993907.SecondClass.getOrderedValuesBy
@@ -12,6 +13,8 @@ import static org.mockito.ArgumentMatchers.anyString
 import static org.powermock.api.mockito.PowerMockito.mockStatic
 import static org.powermock.api.mockito.PowerMockito.when
 
+// TODO: Configure '--add-opens' and '-Djdk.attach.allowAttachSelf=true' for JDK 16+ in Surefire/Failsafe
+@Requires({ Integer.parseInt(System.getProperty("java.version").replaceAll("[.].*", "")) < 16 })
 @RunWith(PowerMockRunner)
 @PowerMockRunnerDelegate(Sputnik)
 @PrepareForTest(SecondClass)
